timesheet_token/force-app/main/default/objects/Timesheet__c/fields/Time_Off_End__c.field-meta.xml
<CustomField>
    <fullName>Time_Off_End__c</fullName>
    <label>Time Off End</label>
    <type>Date</type>
</CustomField>