timesheet_token/force-app/main/default/objects/Timesheet__c/fields/Time_Off_Requested__c.field-meta.xml
<CustomField>
    <fullName>Time_Off_Requested__c</fullName>
    <formula>Time_Off_End__c  -  Time_Off_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Off Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>