timesheet_token/force-app/main/default/objects/Timesheet__c/fields/Time_Off_Start__c.field-meta.xml
<CustomField>
    <fullName>Time_Off_Start__c</fullName>
    <label>Time Off Start</label>
    <type>Date</type>
</CustomField>