timesheet_token/force-app/main/default/objects/Timesheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date__c</columns>
    <columns>Employee__c</columns>
    <columns>Hours_Worked__c</columns>
    <columns>Activities__c</columns>
    <columns>Time_Off_Requested__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>